Bug 74226 - LibreOffice crashes as soon as one starts Draw
Summary: LibreOffice crashes as soon as one starts Draw
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Draw (show other bugs)
Version:
(earliest affected)
4.2.0.4 release
Hardware: x86-64 (AMD64) Windows (All)
: highest critical
Assignee: Not Assigned
URL:
Whiteboard: BSA target:4.2.1
Keywords: regression
: 74228 74246 74259 74396 74449 74488 74722 74814 74896 75088 75149 (view as bug list)
Depends on:
Blocks:
 
Reported: 2014-01-30 15:09 UTC by Alexander Wilms
Modified: 2014-03-05 09:53 UTC (History)
20 users (show)

See Also:
Crash report or crash signature:


Attachments
crash analysis (7.80 KB, text/plain)
2014-01-30 22:24 UTC, Helmut Leininger
Details
more complete debug (23.04 KB, text/plain)
2014-01-30 22:49 UTC, Helmut Leininger
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Alexander Wilms 2014-01-30 15:09:17 UTC
Problem description: 
Start Draw from Writer/Calc... or via the separate application icon and it crashes

Steps to reproduce:
1. Start Draw

Current behavior:
It crashes

Expected behavior:
It shouldn't
              
Operating System: Windows 7
Version: 4.2.0.4 rc
Last worked in: 4.1.4.2 release
Comment 1 Maxim Monastirsky 2014-01-30 15:33:26 UTC
*** Bug 74228 has been marked as a duplicate of this bug. ***
Comment 2 Maxim Monastirsky 2014-01-30 15:37:58 UTC
Hi,

I can't reproduce the crash under Windows 7.

Is it a clean install, or an upgrade from 4.1/4.0? If it's an upgrade, please try to reset the user profile as described at https://wiki.documentfoundation.org/User_Profile, and report if it solves your problem.
Comment 3 Alexander Wilms 2014-01-30 15:57:50 UTC
I removed 4.1 before installing 4.2.

Just to be sure, I deleted the user profile, but it still crashes
Comment 4 kuhntandreas 2014-01-30 16:06:08 UTC
I removed LibreOffice 4.2 and all folders from previous versions including the profile folder and made a clean install of 4.2. The problem still remains.

Operating system: Windows 8.1 64 bit
Comment 5 Julien Nabet 2014-01-30 16:51:07 UTC
Fabian/kuhntandreas: did you install any specific fonts? If yes, for the test, could you uninstall them (or put them aside) and give it a new try?
Comment 6 Maxim Monastirsky 2014-01-30 20:31:05 UTC
*** Bug 74246 has been marked as a duplicate of this bug. ***
Comment 7 Maxim Monastirsky 2014-01-30 21:09:29 UTC
Would be great if someone who have the crash could upload a backtrace. Instructions are at https://wiki.documentfoundation.org/How_to_get_a_backtrace_with_WinDbg
Comment 8 Helmut Leininger 2014-01-30 22:24:42 UTC
Created attachment 93089 [details]
crash analysis
Comment 9 Jochen 2014-01-30 22:29:56 UTC
Set status to "new" after attaching a crash report
thx to Helmut
Comment 10 Helmut Leininger 2014-01-30 22:49:13 UTC
Created attachment 93091 [details]
more complete debug
Comment 11 Dennis 2014-01-31 14:36:03 UTC
*** Bug 74259 has been marked as a duplicate of this bug. ***
Comment 12 Stephan Bergmann 2014-01-31 16:18:50 UTC
@mstahl, could this be related to <http://cgit.freedesktop.org/libreoffice/core/commit/?id=2ca79052d0fab159b017cacd3d7145d8012de850> "vcl: try to fix sizes in ImplBlendToBitmap()" (given that attachment 93091 [details] might suggest a memory corruption, and ImplBlendToBitmap may get called during OutputDevice::ImplDrawAlpha)
Comment 13 Michael Stahl 2014-01-31 17:16:16 UTC
it is quite possible that the commit in comment #12 would do something
about the problem; the stack frames from OutputDevice::DrawBitmapEx down
look familiar... the old code looks wrong and has probably only worked
by accident.

but i'm not quite sure if there is something relying on
rSrcBuffer.mnHeight being used, say if it is smaller than
rDstBuffer.mnHeight; we'll see if we get a bug report about
that on master... with an additional std::min thrown in
it should be safe to backport to 4.2 i guess.
Comment 14 Florian Reisinger 2014-02-01 08:35:39 UTC
Hi,

WFM with Version: 4.2.1.0.0+
Build ID: 92346fb7714ca7c6a467771d8a8b01305c1b17d1
TinderBox: Win-x86@42, Branch:libreoffice-4-2, Time: 2014-01-31_00:15:33
but not with
Version: 4.2.0.4
Build-ID: 05dceb5d363845f2cf968344d7adab8dcfb2ba71
@Win 7 x64
Comment 15 Maxim Monastirsky 2014-02-02 17:56:54 UTC
*** Bug 74396 has been marked as a duplicate of this bug. ***
Comment 16 Maxim Monastirsky 2014-02-03 16:21:42 UTC
*** Bug 74449 has been marked as a duplicate of this bug. ***
Comment 17 retired 2014-02-04 08:30:25 UTC
*** Bug 74488 has been marked as a duplicate of this bug. ***
Comment 18 Commit Notification 2014-02-04 12:49:37 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-4-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=67d36215a3b846513335f69a83cb941cc5dcdc11&h=libreoffice-4-2

vcl: try to fix sizes in ImplBlendToBitmap (related: fdo#74226)


It will be available in LibreOffice 4.2.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 19 Michael Stahl 2014-02-04 14:06:18 UTC
not sure how to test this, potentially it's a bug like bug 73464 that
happens to work when built with MSVC2012 but not when built with 2010?
Comment 20 Jean 2014-02-05 10:16:09 UTC
Hello,

Not sure it is related, but my LibO 4.2.0.4 crashes when attempting to open big ODG files (lots of drawings, lots of images, created with former versions), or complex PDF...
Tried 4.2.1.0, same crashes.
Comment 21 Maxim Monastirsky 2014-02-10 10:06:22 UTC
*** Bug 74722 has been marked as a duplicate of this bug. ***
Comment 22 Clemens Eisserer 2014-02-12 09:53:49 UTC
Same here, draw crashes as soon as I try to open it.
Draw-4.1 which was previously installed on the same Windows-7 machine worked flawless.
Comment 23 Julien Nabet 2014-02-12 12:15:00 UTC
Jean: it's not the same case since you've got a crash when you open big odg files not just at the start of Draw. Please fill a new bugreport.

For those who encountered this bug:
For the test, following the Michael's commit on 4.2, could you give a try to the daily build? (see http://dev-builds.libreoffice.org/daily/libreoffice-4-2/Win-x86@42/current/) and tell us if the bug is fixed or not?
Thank you in advance!
Comment 24 Christian Lohmaier 2014-02-12 12:24:03 UTC
note that checking with a build from the @42 tinderbox won't give conclusive results (only if you could reproduce the crash with builds from that bot at some point) - it uses different compiler. So even if it works with builds from that machine, it doesn't mean the problem is fixed.


What needs to be done is to find what is different from the system where it crashes, from those where it can be run without problem.

What version of java do those have installed?
Maybe all using same virus checker?

Why does it crash only for some people is the big question here...
Comment 25 Dennis 2014-02-12 12:34:23 UTC
The actual DEV will work!


tested DEV: libo-42~2014-02-10_23.09.14_LibreOfficeDev_4.2.1.0.0_Win_x86.msi

OS: Win7 Pro x64

Java: Version 7 Update 51 (Build 1.7.0_51-b13)
Comment 26 Stephan Bergmann 2014-02-12 12:52:42 UTC
(In reply to comment #24)
> Why does it crash only for some people is the big question here...

My completely unchecked assumption after just a very high-level look was that it might have to do with varying pixel color depth.
Comment 27 Maxim Monastirsky 2014-02-12 13:33:37 UTC
(In reply to comment #24)
> Why does it crash only for some people is the big question here...
Finally I'm able to reproduce the crash. It's related to the window size. The crash occurs only if the window not large enough to show the whole page in the slides pane. Then it crashes for me with the same backtrace as provided above.
Comment 28 Maxim Monastirsky 2014-02-12 13:35:06 UTC
*** Bug 74814 has been marked as a duplicate of this bug. ***
Comment 29 Maxim Monastirsky 2014-02-12 13:56:03 UTC
Reproducible with a build of @42 tinderbox from 2014-02-03_09:29:12, but not with a build from 2014-02-10_23:09:14. So looks fixed.
Comment 30 Maxim Monastirsky 2014-02-12 20:15:20 UTC
*** Bug 74896 has been marked as a duplicate of this bug. ***
Comment 31 Christian Lohmaier 2014-02-14 12:47:39 UTC
To verify that the bug really is fixed with the current code, please try with the 4.2.1 RC1 build - if it doesn't occur with that build, then indeed the problem was solved in the meantime.

http://dev-builds.libreoffice.org/pre-releases/win/x86/
Comment 32 Dennis 2014-02-14 13:28:40 UTC
7.2.1 RC1 works!
Comment 33 Helmut Leininger 2014-02-14 13:39:07 UTC
RC 4.2.1.1 works for me, too.
Comment 34 retired 2014-02-14 14:43:20 UTC
2 confirms, that this is fixed, thus setting to Resolved | Fixed.

So all who are stuck with this issue and need to get work done please follow  Christian Lohmaier's  link in Comment 31.
Comment 35 Dr. Dieter Brose 2014-02-14 15:31:12 UTC
Many thanks, 4.2.1.1 is o.k. I can work in draw.




Am .02.2014, 14:39 Uhr, schrieb <bugzilla-daemon@freedesktop.org>:

>
> Comment # 33 on bug 74226 from Helmut LeiningerRC 4.2.1.1 works for me,  
> too.
> You are receiving this mail because:You are on the CC list for the bug.
Comment 36 Maxim Monastirsky 2014-02-17 19:37:33 UTC
*** Bug 75088 has been marked as a duplicate of this bug. ***
Comment 37 Maxim Monastirsky 2014-02-18 09:13:28 UTC
*** Bug 75149 has been marked as a duplicate of this bug. ***