vcl: try to fix sizes in ImplBlendToBitmap (related: fdo#74226)

Since commit 2f84b420e0428693fb2d45b68afdc9023dfc08bc,
sw_unoapi test sw.SwAccessibleEndnoteView crashes while trying to blend
a 1107x8 Bitmap into a 97x8 Bitmap; it's not obvious that any of the
parameters passed in is wrong and it's odd that ImplBlendToBitmap()
would use rSrcBuffer.mnHeight and rDstBuffer.mnWidth; presumably
it should use both height and width of the same buffer.

This backport has an additional std::min added for safety; on master we
can try without to see if it's really needed.

(cherry picked from commit 2ca79052d0fab159b017cacd3d7145d8012de850)

Change-Id: I40b98ba56e703323df91f6fd7773addcfd69a402